--- a/public/screen.css
+++ b/public/screen.css
@@ -10,3 +10,13 @@ body {
   margin: 0;
   min-height: 100%;
 }
+
+.menu-bar {
+  display: flex;
+  flex-direction: row;
+}
+
+footer {
+  display: flex;
+  flex-direction: row;
+}
