--- a/public/screen.css
+++ b/public/screen.css
@@ -14,9 +14,27 @@ body {
 .menu-bar {
   display: flex;
   flex-direction: row;
+  background-color: #512da8;
+  color: white;
+}
+
+.pic-of-the-day {
+  /* put in potd from api */
+  background-color: black;
+  color: white;
+}
+
+header {
+  background-color: #ffc107;
+}
+
+.mission-statement {
+  background-color: #d1c4e9;
 }
 
 footer {
   display: flex;
   flex-direction: row;
+  background-color: #512da8;
+  color: #cccccc;
 }
