--- a/public/screen.css
+++ b/public/screen.css
@@ -16,12 +16,21 @@ body {
   flex-direction: row;
   background-color: #512da8;
   color: white;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .pic-of-the-day {
   /* put in potd from api */
   background-color: black;
   color: white;
+  display: flex;
+  justify-content: center;
+}
+
+.copyright {
+  display: flex;
+  justify-content: center;
 }
 
 header {
@@ -30,6 +39,15 @@ header {
 
 .mission-statement {
   background-color: #d1c4e9;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+p {
+  margin: 3rem;
+  flex: wrap;
+  flex-wrap: wrap;
 }
 
 footer {
@@ -37,4 +55,6 @@ footer {
   flex-direction: row;
   background-color: #512da8;
   color: #cccccc;
+  justify-content: center;
+  align-items: center;
 }
