--- a/public/screen.css
+++ b/public/screen.css
@@ -20,9 +20,23 @@ body {
   justify-content: space-between;
 }
 
-.pic-of-the-day {
+h1 {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+nav {
+  display: flex;
+  flex-direction: row;
+}
+
+h3 {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#pic-of-the-day {
   /* put in potd from api */
-  background-color: black;
   color: white;
   display: flex;
   justify-content: center;
@@ -31,6 +45,7 @@ body {
 .copyright {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 header {
@@ -46,7 +61,7 @@ header {
 
 p {
   margin: 3rem;
-  flex: wrap;
+  display: flex;
   flex-wrap: wrap;
 }
 
