--- a/public/screen.css
+++ b/public/screen.css
@@ -18,6 +18,7 @@ header {
   color: white;
   align-items: center;
   justify-content: space-between;
+  height: 3rem;
 }
 
 h1 {
@@ -48,7 +49,7 @@ h3 {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  height: 1rem;
+  height: 0.05rem;
   padding: 0;
 }
 
@@ -61,11 +62,14 @@ h3 {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  height: 10rem;
+  height: 15rem;
+  align-items: center;
 }
 
 button {
   background-color: #ffc107;
+  height: 8rem;
+  width: 5rem;
 }
 
 .mission-statement {
