--- a/public/screen.css
+++ b/public/screen.css
@@ -37,7 +37,6 @@ h3 {
 }
 
 #pic-of-the-day {
-  /* put in potd from api */
   color: white;
   display: flex;
   justify-content: center;
@@ -45,12 +44,17 @@ h3 {
   height: 20rem;
 }
 
-.copyright {
+.copyright-bar {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   height: 1rem;
   padding: 0;
+}
+
+.copyright-text {
+  padding: 0;
+  margin: 0;
 }
 
 .space-x {
