--- a/public/screen.css
+++ b/public/screen.css
@@ -18,7 +18,7 @@ header {
   color: white;
   align-items: center;
   justify-content: space-between;
-  height: 3rem;
+  height: 3.5rem;
 }
 
 h1 {
@@ -42,6 +42,9 @@ h3 {
   justify-content: center;
   align-items: center;
   height: 20rem;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 .copyright-bar {
@@ -74,7 +77,7 @@ h3 {
 
 button {
   background-color: #ffc107;
-  height: 8rem;
+  height: 7rem;
   width: 5rem;
 }
 
@@ -96,6 +99,8 @@ button {
 .launch-element {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
   padding: 0.5rem 0.5rem 0 0.5rem;
 }
 
