--- a/public/screen.css
+++ b/public/screen.css
@@ -108,7 +108,7 @@ button {
 .launch-element {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
   padding: 0.5rem 0.5rem 0 0.5rem;
 }
