--- a/public/screen.css
+++ b/public/screen.css
@@ -29,14 +29,23 @@ h1 {
 }
 
 nav {
-  /* nav elements need to highlight on hover */
   display: flex;
   flex-direction: row;
+  height: 100%;
+  padding: 0;
+  align-items: center;
 }
 
-h3 {
+nav h3 {
   display: flex;
   flex-wrap: wrap;
+  text-decoration: underline;
+  margin: 0 1rem 0 1rem;
+  height: 100%;
+}
+
+h3:hover {
+  background-color: #ffc107;
 }
 
 #pic-of-the-day {
@@ -44,7 +53,7 @@ h3 {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 20rem;
+  height: 22rem;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -54,7 +63,7 @@ h3 {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  height: 1rem;
+  height: 0.75rem;
   padding: 0;
 }
 
@@ -65,7 +74,7 @@ h3 {
 
 .space-x {
   background-color: #ffc107;
-  height: 3rem;
+  height: 4rem;
   display: flex;
   align-items: center;
 }
@@ -98,11 +107,11 @@ button {
 }
 
 .launch-data {
-  /* needs more styling */
   background-color: #ededed;
   border-radius: 5%;
-  max-height: 90%;
-  width: 55%;
+  height: 90%;
+  width: 100%;
+  margin: 0 2.5rem 0 2.5rem;
 }
 
 .launch-element {
@@ -111,6 +120,7 @@ button {
   justify-content: left;
   align-items: center;
   padding: 0.5rem 0.5rem 0 0.5rem;
+  margin: 0 0.5rem 0 0.5rem;
 }
 
 .description-element {
@@ -145,6 +155,20 @@ footer {
   color: #cccccc;
   justify-content: center;
   align-items: center;
+  height: 5rem;
+}
+
+h5 {
+  margin: 0 0.2rem 0 0.2rem;
+}
+
+/* not working */
+h5:visited {
+  color: #cccccc;
+}
+
+#sdg-link {
+  text-decoration: underline;
 }
 
 /* make responsive for screen size  */
