--- a/public/screen.css
+++ b/public/screen.css
@@ -89,14 +89,15 @@ h3:hover {
 
 button {
   background-color: #ffc107;
-  height: 7rem;
-  width: 5rem;
+  height: 8rem;
+  width: 8rem;
   padding: 0;
 }
 
-/* button i {
-  size: 3rem;
-} */
+/*not working*/
+button i {
+  height: 5rem;
+}
 
 .left-arrow {
   border-radius: 0 10% 10% 0;
@@ -136,7 +137,7 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 20rem;
+  height: 16rem;
 }
 
 .mission-statement p {
@@ -145,13 +146,13 @@ button {
   padding: 0 4rem 0 4rem;
   margin: 0;
   font-size: 1.25rem;
-  /* need to center-justify text */
+  text-align: center;
 }
 
 footer {
   display: flex;
   flex-direction: row;
-  background-color: #512da8;
+  background-color: #673ab7;
   color: #cccccc;
   justify-content: center;
   align-items: center;
