--- a/public/screen.css
+++ b/public/screen.css
@@ -77,6 +77,7 @@ h3:hover {
   height: 4rem;
   display: flex;
   align-items: center;
+  padding-left: 0.5rem;
 }
 
 .carousel {
@@ -120,8 +121,17 @@ button i {
   flex-direction: row;
   justify-content: left;
   align-items: center;
-  padding: 0.5rem 0.5rem 0 0.5rem;
-  margin: 0 0.5rem 0 0.5rem;
+  margin: 0.5rem 0.5rem 0 0.5rem;
+}
+
+.name-element {
+  justify-content: center;
+  text-align: center;
+}
+
+h4 {
+  margin: 0;
+  padding: 0;
 }
 
 .description-element {
