--- a/public/screen.css
+++ b/public/screen.css
@@ -33,18 +33,19 @@ nav {
   flex-direction: row;
   height: 100%;
   padding: 0;
-  align-items: center;
 }
 
-nav h3 {
+.nav-item {
   display: flex;
   flex-wrap: wrap;
   text-decoration: underline;
   margin: 0 1rem 0 1rem;
   height: 100%;
+  align-items: center;
+  padding: 0 0.5rem 0 0.5rem;
 }
 
-h3:hover {
+.nav-item:hover {
   background-color: #ffc107;
 }
 
