--- a/public/screen.css
+++ b/public/screen.css
@@ -26,6 +26,9 @@ header {
 h1 {
   display: flex;
   flex-wrap: wrap;
+  font-size: 1.5rem;
+  padding-left: 0.5rem;
+  font-weight: normal;
 }
 
 nav {
@@ -60,6 +63,10 @@ nav {
   background-position: center;
 }
 
+h2 {
+  font-size: 2rem;
+}
+
 .copyright-bar {
   display: flex;
   justify-content: center;
@@ -71,6 +78,7 @@ nav {
 .copyright-text {
   padding: 0;
   margin: 0;
+  font-weight: normal;
 }
 
 .space-x {
@@ -79,6 +87,11 @@ nav {
   display: flex;
   align-items: center;
   padding-left: 0.5rem;
+}
+
+.space-x h1,
+.mission-statement h1 {
+  font-weight: bold;
 }
 
 .carousel {
@@ -175,6 +188,8 @@ footer {
 
 h5 {
   margin: 0 0.2rem 0 0.2rem;
+  font-size: 1rem;
+  font-weight: normal;
 }
 
 /* not working */
